# argus-retina

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  PLAN.md  README.md  vcpkg.json
docs/: project-plan.md  retina-cortex-contract.md
include/argus/retina/: retina_contract.hpp  retina_engine.hpp
src/: retina_engine.cpp
tests/: retina_contract_test.cpp
